  - AntiSamy replaced by OWASP Java HTML Sanitizer
- Removed ServiceSemaphore entity, now using ServiceParameterSemaphore
- Deprecated methods
  - These methods were deprecated (usually by methods with shorter names)
    long ago and with other API changes now removing them
  - Removed getLocalizedMessage() and formatValue() from L10nFacade
  - Removed runScriptInCurrentContext(), evaluateCondition(),
    evaluateContextField(), and evaluateStringExpand() from ResourceFacade
- ArtifactHit and ArtifactHitBin now use same artifact type enum as
  ArtifactAuthz, for efficiency and consistency; configuration of
  artifact-stats by sub-type no longer supported, had little value and
  caused performance overhead
- The ContextStack class has moved to the org.moqui.util package
- When updating to this version recommend stopping all instances in a
  cluster before starting any instance with the new version

New Features

- Now using Jetty embedded for the executable WAR instead of Winstone
  - using Jetty 9 which requires Java 8
  - now internally using Servlet API 3.1.0
- Various library updates, big cleanup of classes found in multiple jar
  files (JarHell checks pass; nice in general, needed for ElasticSearch)
- Configuration
  - Added default-property element to set Java System properties from the
    configuration file
  - Added Groovy string expansion to various configuration attributes
    - looks for named fields in Java System properties and environment
      variables
    - used in default-property.@value and all xa-properties attributes
    - replaces the old explicit check for ${moqui.runtime}, which was a
      simple replacement hack
    - because these are Groovy expressions the typical dots used in
      property names cannot be used in these strings, use an underscore
      instead of a dot, ie ${moqui_runtime} instead of ${moqui.runtime};
      if a property name contains underscores and no value is found with